fix: focus on input on mobile version

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,6 +21,11 @@
   border-radius: 10px;
   border: 3px solid rgba(0, 0, 0, 0.906);
 }
+html {
+  margin: 0;
+  overflow: hidden;
+  height: 100%;
+}
 body {
   font-family: Montserrat, sans-serif;
 
@@ -29,6 +34,10 @@ body {
   line-height: 1.5;
 
   background: #181a1b;
+  margin: 0;
+  overflow: auto;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
 
   @media (max-width: 768px) {
     font-size: 16px;
